<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrainlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="192dp"
        android:layout_height="192dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/pemainvspemain"
        android:layout_width="0dp"
        android:layout_height="128dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/pemain_lawan_pemain"
        android:src="@drawable/pemain"
        app:layout_constraintEnd_toEndOf="@id/logo"
        app:layout_constraintStart_toStartOf="@id/logo"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <TextView
        android:id="@+id/tv_pemain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/pemain_vs_pemain"
        app:layout_constraintEnd_toEndOf="@id/pemainvspemain"
        app:layout_constraintStart_toStartOf="@id/pemainvspemain"
        app:layout_constraintTop_toBottomOf="@id/pemainvspemain" />

    <ImageView
        android:id="@+id/pemainvscpu"
        android:layout_width="0dp"
        android:layout_height="128dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/bermain_melawan_komputer"
        android:src="@drawable/cpu"
        app:layout_constraintEnd_toEndOf="@id/pemainvspemain"
        app:layout_constraintStart_toStartOf="@id/pemainvspemain"
        app:layout_constraintTop_toBottomOf="@id/pemainvspemain" />

    <TextView
        android:id="@+id/tv_cpu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/pemain_vs_cpu"
        app:layout_constraintEnd_toEndOf="@id/pemainvscpu"
        app:layout_constraintStart_toStartOf="@id/pemainvscpu"
        app:layout_constraintTop_toBottomOf="@id/pemainvscpu" />

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@drawable/ripple_effect"
        android:text="@string/keluar"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>