<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#71B8F1"
    tools:context=".AreaMain">

    <ImageView
        android:id="@+id/reset"
        android:contentDescription="@string/reset"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:src="@drawable/ic_autorenew_black_24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo2"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pemain1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:hint="@string/pemain_1"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/batu1"
        app:layout_constraintStart_toStartOf="@id/batu1"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <TextView
        android:id="@+id/pemain2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/pemain2"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/pemain1"
        app:layout_constraintEnd_toEndOf="@id/batu2"
        app:layout_constraintTop_toTopOf="@id/pemain1" />

    <ImageView
        android:id="@+id/batu1"
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/batu"
        android:onClick="onClick"
        android:src="@drawable/batu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pemain1" />

    <ImageView
        android:id="@+id/kertas1"
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/kertas"
        android:src="@drawable/kertas"
        app:layout_constraintStart_toStartOf="@id/batu1"
        app:layout_constraintTop_toBottomOf="@id/batu1" />

    <ImageView
        android:id="@+id/gunting1"
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/gunting"
        android:src="@drawable/gunting"
        app:layout_constraintStart_toStartOf="@id/kertas1"
        app:layout_constraintTop_toBottomOf="@id/kertas1" />

    <ImageView
        android:id="@+id/batu2"
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:layout_marginEnd="50dp"
        android:contentDescription="@string/batu"
        android:src="@drawable/batu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/batu1"
        app:layout_constraintTop_toTopOf="@id/batu1" />

    <ImageView
        android:id="@+id/kertas2"
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/kertas"
        android:src="@drawable/kertas"
        app:layout_constraintStart_toStartOf="@id/batu2"
        app:layout_constraintTop_toBottomOf="@id/batu2" />

    <ImageView
        android:id="@+id/gunting2"
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/gunting"
        android:src="@drawable/gunting"
        app:layout_constraintStart_toStartOf="@id/kertas2"
        app:layout_constraintTop_toBottomOf="@id/kertas2"
        android:focusable="true" />

    <TextView
        android:id="@+id/hasil"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:hint="@string/pemain_1_menang"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="#B10404"
        android:textSize="58sp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>