<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".welcome.PemainFragment">


    <ImageView
        android:id="@+id/cpu"
        android:layout_width="0dp"
        android:layout_height="192dp"
        android:src="@drawable/cpu"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/pemain_lawan_pemain" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/bermain_melawan_komputer"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/cpu"
        app:layout_constraintEnd_toEndOf="@id/cpu"
        app:layout_constraintTop_toBottomOf="@id/cpu" />

    <TextView
        android:id="@+id/slide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/slide_2_of_3"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_navigate_next_"
        app:layout_constraintTop_toTopOf="@id/slide"
        app:layout_constraintBottom_toBottomOf="@id/slide"
        app:layout_constraintStart_toEndOf="@id/slide"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/next_slide" />

</androidx.constraintlayout.widget.ConstraintLayout>