<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".welcome.PemainFragment">


    <ImageView
        android:id="@+id/pemain"
        android:layout_width="0dp"
        android:layout_height="192dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:contentDescription="@string/pemain_lawan_pemain"
        android:src="@drawable/pemain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/bermain_suit_melawan_sesama_pemain"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/pemain"
        app:layout_constraintStart_toStartOf="@id/pemain"
        app:layout_constraintTop_toBottomOf="@id/pemain" />

    <TextView
        android:id="@+id/slide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/slide_1_of_3"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/next_slide"
        android:src="@drawable/ic_baseline_navigate_next_"
        app:layout_constraintBottom_toBottomOf="@id/slide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/slide"
        app:layout_constraintTop_toTopOf="@id/slide" />

</androidx.constraintlayout.widget.ConstraintLayout>